--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
