--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && serve dist",
+    "prod": "npx pm2 delete NixFrontend; pm2 --name NixFrontend --time start npm -- start"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
@@ -33,6 +35,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.33",
+    "serve": "^14.2.1",
+    "pm2": "^5.3.0",
     "tailwindcss": "^3.4.0",
     "vite": "^4.4.5"
   }
