fix usage of env variable
Signed-off-by: Vishal <dvishal485@gmail.com>

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#REACT_APP_BASEURL = 134.209.159.97:8080/api/v1
-REACT_APP_BASEURL = http://localhost:8080/api/v1
+# this only effects local development, production env var is hardcoded in npm start script
+VITE_NIX_BACKEND="http://localhost:8080/api/v1"
