--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
-    "react-toastify": "^9.1.3",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
