--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --fix",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --fix",
     "preview": "vite preview",
     "start": "VITE_NIX_BACKEND=http://134.209.159.97:8080/api/v1 vite build && serve dist -l 5173",
     "prod": "npx pm2 delete NixFrontend; pm2 --name NixFrontend --time start npm -- start"
