--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# this only effects local development, production env var is hardcoded in npm start script
+# this is a sample file, use .env.local for real env variables
 VITE_NIX_BACKEND="http://localhost:8080/api/v1"
