--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --fix",
     "preview": "vite preview",
-    "start": "VITE_NIX_BACKEND=http://134.209.159.97:8080/api/v1 vite build && node server.js",
+    "start": "vite build && node server.js",
     "prod": "npx pm2 delete NixFrontend; pm2 --name NixFrontend --time start npm -- start"
   },
   "dependencies": {
