--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "axios": "^1.6.5",
     "express": "^4.18.2",
+    "html-react-parser": "^5.1.6",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
