--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-heading": "^41.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "axios": "^1.6.5",
     "express": "^4.18.2",
