--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # this is a sample file, use .env.local for real env variables
 VITE_NIX_BACKEND="http://localhost:8080/api/v1"
+APP_URL="https://team.dtutimes.com"
