--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,23 +16,21 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Deploy on Digitalocean
-        uses: appleboy/ssh-action@v0.1.2
-        with:
-          host: ${{secrets.SSH_HOST}}
-          key: ${{secrets.SSH_KEY}}
-          username: ${{secrets.SSH_USERNAME}}
-          script: |
-            cd ~/nix_frontend
-            git stash
-            git pull
-            npm i
-            npm run build
+      - name: Get to work dir
+        run: cd $GITHUB_WORKSPACE
+
+      - name: Install dependencies
+        run: npm i
+
+      - name: Update build path
+        run: ln -s ~/nix_frontend/dist dist
+
+      - name: Run build task
+        run: npm run build
