--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-heading": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^6.3.0",
     "axios": "^1.7.4",
+    "express": "^4.21.2",
     "html-react-parser": "^5.1.10",
     "multiselect-react-dropdown": "^2.0.25",
     "papaparse": "^5.5.2",
