--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@ckeditor/ckeditor5-heading": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^6.3.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
     "axios": "^1.7.4",
-    "express": "^4.21.2",
     "html-react-parser": "^5.1.10",
     "multiselect-react-dropdown": "^2.0.25",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
