--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         run: npm run build
 
       - name: Deploy to web
-        run: rsync -avz --delete dist/ ~/nix_frontend/dist
+        run: rsync -avz --delete dist/ /var/www/nix-frontend/team.dtutimes.com
