--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,4 +40,4 @@ jobs:
         run: npm run build
 
       - name: Deploy to web
-        run: rsync -avz --delete dist/ /var/www/nix-frontend/team-dev.dtutimes.com
+        run: rsync -vz --delete dist/ /var/www/nix-frontend/team-dev.dtutimes.com
