--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,14 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Deploy on push
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-latest 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
           submodules: "true"
@@ -30,19 +18,28 @@ jobs:
           node-version: 22
           cache: "npm"
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: "npm"
-
-      - name: Get to work dir
-        run: cd $GITHUB_WORKSPACE && echo $GITHUB_WORKSPACE && ls -la
-
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Run build task
         run: npm run build
 
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+  deploy:
+    runs-on: self-hosted 
+    needs: build
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: ./dist
+
       - name: Deploy to web
-        run: rsync -vz --delete --recursive dist/ /var/www/nix-frontend/team.dtutimes.com
+        run: |
+          rsync -az --delete ./dist/ /var/www/nix-frontend/team.dtutimes.com
