--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Deploy to web
         run: |
-          rsync -az --delete ./dist/ /var/www/nix-frontend/team.dtutimes.com
+          rsync -az --delete --no-o --no-g ./dist/ /var/www/nix-frontend/team.dtutimes.com
