--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: 22
           cache: "npm"
+      
+      - name: Get to work dir
+        run: cd $GITHUB_WORKSPACE && echo $GITHUB_WORKSPACE && ls -la
 
       - name: Install dependencies
         run: npm ci
