--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,11 @@ jobs:
     runs-on: self-hosted 
     needs: build
     steps:
-      # - name: Download build artifact
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: dist
-      #     path: ./dist
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: ./dist
 
       - name: Deploy to web
         run: |
