--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@ckeditor/ckeditor5-heading": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^6.3.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3",
+    "@typescript-eslint/parser": "^8.42.0",
     "axios": "^1.7.4",
     "html-react-parser": "^5.1.10",
     "multiselect-react-dropdown": "^2.0.25",
